# Meshflow_vibe

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/meshflow_vibe_core/: Cargo.toml
crates/meshflow_vibe_core/src/: events.rs  lib.rs  setup.rs
crates/meshflow_vibe_core/src/assets/: mod.rs
crates/meshflow_vibe_core/src/assets/materials/: definition.rs  load.rs  mod.rs
crates/meshflow_vibe_core/src/entities/: component_editor.rs  deserialize.rs  generate_tangents.rs  lifecycle.rs  mod.rs  plugin.rs  serialize.rs
crates/meshflow_vibe_core/src/entities/edit_mode/: mod.rs  plugin.rs  sub_selection.rs
crates/meshflow_vibe_core/src/entities/editable/: definition.rs  mod.rs
crates/meshflow_vibe_core/src/entities/editable/types/: mod.rs
crates/meshflow_vibe_core/src/entities/editable/types/camera_3d/: creation.rs  mod.rs  plugin.rs  ui.rs  update_event.rs
crates/meshflow_vibe_core/src/entities/editable/types/directional_light/: update_event.rs
crates/meshflow_vibe_core/src/entities/editable/types/empty/: update_event.rs
crates/meshflow_vibe_core/src/shared/: file.rs  file_browser.rs  user_input.rs  version.rs
crates/meshflow_vibe_core/src/tests/: basic.rs  fixtures.rs  helpers.rs  integration.rs  mod.rs  path_helpers.rs  serialization.rs  version.rs
crates/meshflow_vibe_core/src/topology/: builder.rs  elements.rs  exporter.rs  ids.rs  mod.rs  tests.rs
crates/meshflow_vibe_core/src/world/: mod.rs  open.rs  plugin.rs  save.rs
crates/meshflow_vibe_editor/: Cargo.toml
crates/meshflow_vibe_editor/config/: config.toml
crates/meshflow_vibe_editor/src/: lib.rs  setup.rs
crates/meshflow_vibe_editor/src/editor_state/: config.rs  dock.rs  editor.rs  mod.rs  plugin.rs
crates/meshflow_vibe_editor/src/entities/: bounds.rs  creation.rs  mod.rs  relationship.rs
crates/meshflow_vibe_editor/src/input/: mod.rs  shortcuts.rs
crates/meshflow_vibe_editor/src/interface/: events.rs  plugin.rs
crates/meshflow_vibe_editor/src/interface/cache/: entity_cache.rs  entity_cache_system.rs  mod.rs  sync.rs
crates/meshflow_vibe_editor/src/interface/layout/: dock.rs  mod.rs  top_bar.rs
crates/meshflow_vibe_editor/src/interface/panels/: bottom_panel.rs  mod.rs  right_panel.rs
crates/meshflow_vibe_editor/src/interface/popups/: add_entity_ui.rs  mod.rs  popup_requested_system.rs
crates/meshflow_vibe_editor/src/interface/shared/: mod.rs
crates/meshflow_vibe_editor/src/interface/shared/widgets/: combobox.rs  mod.rs  solid_frame.rs
crates/meshflow_vibe_editor/src/interface/tabs/: mod.rs
crates/meshflow_vibe_editor/src/interface/tabs/debug/: system.rs  ui.rs
crates/meshflow_vibe_editor/src/interface/tabs/editor_settings/: mod.rs  system.rs  ui.rs
crates/meshflow_vibe_editor/src/interface/tabs/entity_editor/: data.rs  mod.rs  tab.rs
crates/meshflow_vibe_editor/src/interface/tabs/events/: system.rs
crates/meshflow_vibe_editor/src/interface/tabs/log/: system.rs  ui.rs
crates/meshflow_vibe_editor/src/interface/tabs/node_tree/: context_menus.rs  data.rs  hierarchy.rs  mod.rs  rendering.rs  selection.rs  system.rs
crates/meshflow_vibe_editor/src/tests/: editor_flows.rs  mod.rs
crates/meshflow_vibe_editor/src/viewport/: grid.rs  mod.rs  plugin.rs  viewmode.rs
crates/meshflow_vibe_editor/src/viewport/camera/: system.rs  utils.rs
crates/meshflow_vibe_editor/src/viewport/debug/: cameras.rs  entities.rs  lights.rs  mod.rs  relationships.rs  selection.rs
crates/meshflow_vibe_editor/src/viewport/icons/: cleanup.rs  mod.rs  spawning.rs  updating.rs
crates/meshflow_vibe_gizmos/: Cargo.toml
crates/meshflow_vibe_gizmos/src/: camera.rs  lib.rs
crates/meshflow_vibe_gizmos/src/gizmos/: distance_scaling.rs  events.rs  manager.rs  mod.rs  plugin.rs
crates/meshflow_vibe_gizmos/src/gizmos/rotate/: drag.rs  gizmo.rs
crates/meshflow_vibe_gizmos/src/gizmos/transform/: drag.rs  gizmo.rs
crates/meshflow_vibe_gizmos/src/gizmos/vertex/: interaction.rs  plugin.rs  spawn.rs
crates/meshflow_vibe_gizmos/src/input/: change_gizmo.rs  mod.rs
crates/meshflow_vibe_gizmos/src/selection/: duplicate.rs  events.rs  manager.rs  mod.rs  plugin.rs  ray.rs
crates/meshflow_vibe_gizmos/src/ui/: mod.rs  panel.rs
crates/meshflow_vibe_macros/: Cargo.toml
crates/meshflow_vibe_macros/src/: lib.rs  tests.rs
examples/: cube_demo.rs  (+1 more)
(+33 files in other folders)
