[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18.1", default-features = false }
bevy-inspector-egui = "0.36.0"
bevy_obj = "0.18.0"
bevy_egui = "0.39.0"
toml = "0.8.22"
uuid = "1.17.0"
serde = "1.0"
native-dialog = "0.7.0"
ron = "0.8.1"
lazy_static = "1.5.0"
serde_json = "1.0"

# Test dependencies
tempfile = "3.19"
criterion = { version = "0.5", default-features = false }

[package]
name = "meshflow_vibe"
version = "0.3.1"
edition = "2021"
description = "A 3d editor for the Bevy game engine."

[features]
default = ["core", "editor", "gizmos"]
core = ["meshflow_vibe_core", "meshflow_vibe_logging", "meshflow_vibe_macros"]
editor = ["core", "gizmos", "meshflow_vibe_editor"]
gizmos = ["core", "meshflow_vibe_gizmos"]

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_obj = { workspace = true }

meshflow_vibe_core = { path = "crates/meshflow_vibe_core", optional = true }
meshflow_vibe_editor = { path = "crates/meshflow_vibe_editor", optional = true }
meshflow_vibe_gizmos = { path = "crates/meshflow_vibe_gizmos", optional = true }
meshflow_vibe_logging = { path = "crates/meshflow_vibe_logging", optional = true }
meshflow_vibe_macros = { path = "crates/meshflow_vibe_macros", optional = true }

[dev-dependencies]
serde = "*"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.19"

[[example]]
name = "dungeon"
required-features = ["bevy/bevy_winit"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
