[package]
name = "meshflow_vibe_macros"
version = "0.3.1"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
once_cell = "1.20.2"

[lib]
proc-macro = true

[dev-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
